--- a/src/Styles/Hamburger.module.css
+++ b/src/Styles/Hamburger.module.css
@@ -12,6 +12,12 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
+}
+
+.hamContainer{
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .container {
